fix spacing of items and tags

--- a/src/components/tech-tree-filter-tags/tech-tree-filter-tags.scss
+++ b/src/components/tech-tree-filter-tags/tech-tree-filter-tags.scss
@@ -70,6 +70,7 @@
   display: grid;
   gap: 10px;
 
+  padding: calc-padding($padding-tiny);
   margin-top: calc-vertical-margin($vertical-margin-tiny);
 
   overflow-y: auto;
