--- a/src/components/tech-tree-item/tech-tree-item.scss
+++ b/src/components/tech-tree-item/tech-tree-item.scss
@@ -17,7 +17,6 @@ $accent-size-tablet-landscape-up: 8px;
   display: grid;
 
   position: relative;
-  margin-bottom: calc-vertical-margin($vertical-margin-large);
 
   border-radius: $border-radius-medium;
 
